--- a/build.gradle
+++ b/build.gradle
@@ -25,9 +25,9 @@ repositories {
 
 dependencies {
     testImplementation(
-            "com.codeborne:selenide:6.19.1",
             "org.junit.jupiter:junit-jupiter:5.10.0",
-            'org.slf4j:slf4j-simple:2.0.7',
+            "com.codeborne:selenide:7.5.0",
+            "org.slf4j:slf4j-api:2.0.9",
             'io.qameta.allure:allure-selenide:2.29.0')
 }
 
